# hobo

./: .env.example  .gitignore  README.md  pyproject.toml
config/: demo.toml  local.toml
docs/: architecture.md  design-notes.md  reconciliation.md  running.md
hobo/: application.py  builder.py  config.py  main.py
hobo/adapters/: base.py  factory.py
hobo/adapters/okx/: __init__.py  account.py  adapter.py  constants.py  execution.py  market_data.py  parsing.py  reference.py  rest.py  websocket.py
hobo/adapters/transport/: rest_base.py  ws_base.py
hobo/core/: bus.py  events.py  exchange_reconciler.py  fill_ingestor.py  fill_reconciler.py  gateway.py  health.py  order_bridge.py  recorder.py  state_store.py  strategy_runner.py  trade_log.py
hobo/domain/: seed.py
hobo/execution/: base.py  manager.py  paper.py
hobo/log/: events.py  format.py  reader.py  recovery.py  snapshot.py  writer.py
hobo/obs/: dashboard.html  logging_config.py  metrics.py  server.py
hobo/replica/: tail.py
hobo/risk/: fold.py  math.py  staleness.py  state.py
hobo/risk/gate/: checks.py  context.py  engine.py
hobo/risk/model/: __init__.py  decision.py  (+3 more)
hobo/strategies/: base.py  mean_reversion.py  momentum.py  oscillator.py
scripts/: reconcile.py
seeds/: desk_seed.json
tests/: conftest.py  test_coldpath.py  test_config.py  test_feed.py  test_fill_ingestor.py  test_gate.py  test_health.py  test_log.py  test_pipeline_integration.py  test_recovery.py  test_reference.py  test_replica.py  test_risk_math.py  test_snapshot.py  test_state_fold.py  test_strategies.py  test_ws_base.py
