[project]
name = "hobo"
version = "0.1.0"
description = "Hobo - event-driven trading engine for OKX perpetual futures"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hobo"]
